Implement bare API viewset for rides

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,11 @@
 .python-version
 .env
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-env/
-venv/
-ENV/
-build/
-dist/
-.eggs/
-*.egg-info/
-.installed.cfg
-*.egg
-pip-log.txt
-pip-delete-this-directory.txt
+db.sqlite3*
 htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-.pyre/
-.mypy_cache/
-.dmypy.json
-dmypy.sock
-.idea/
+.coverage*
 .vscode/
 *.swp
 *.swo
+*.pdf*
+static/
