--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.12"
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-packages = ["ridez"]
+packages = ["ridez", "rides"]
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements/core.txt"]}
